<resources>
    <string name="app_name">VSTU news</string>
    <string name="auth_login_hint">Логин</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_loginIn_btn">Войти</string>
    <string name="auth_errorFieldsIsEmpty_message">Поля не могут быть пустыми</string>
    <string name="errorDownloadNewState_message">Не удалось загрузить ленту \nОбновите экран или попробуйте позже</string>
    <string name="errorSearchNewState_message">Совпадений не найдено</string>
    <string name="NewFeed_search_hint">Поиск</string>
    <string name="profile_logout_btn">Выйти</string>
    <string name="profile_aboutApp_btn">О приложении</string>
    <string name="dialogLogout_exit_btn">Действительно хотите выйти?</string>
    <string name="dialogLogout_cancel_btn">Отмена</string>
    <string name="dialogLogout_exitAccount_btn">Выйти</string>
    <string name="addNew_title_hint">Заголовок</string>
    <string name="addNew_description_hint">Текст</string>
    <string name="addNew_create_btn">Создать</string>
    <string name="NewDetails_errorToolbarUser_message">Загадочная личность</string>
    <string name="add_img_title_dialog">Выбрать фото</string>
    <string name="add_img_gallery_text">"Из галерии "</string>
    <string name="add_img_camera_text">Из камеры</string>
    <string name="New_feed_title_toolbar_text">Новости вуза</string>
    <string name="add_New_error_save_New_message">Ошибка при добавлении. Попробуйте снова</string>
    <string name="view_search_toolbar_title_text">Новости</string>
    <string name="New_feed_empty_filter_message">По результатам запроса ничего не найдено</string>
    <string name="empty_profile_news">Вы можете добавить новость, нажав на центральную кнопку нижнего меню</string>
</resources>