<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimaryContent"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/small_padding"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_dialog_add_img_tv"
            style="@style/TitleLargeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/small_padding"
            android:text="@string/add_img_title_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_dialog_add_img_tv">

            <Button
                android:id="@+id/add_img_for_gallery_btn"
                style="@style/CreateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:padding="@dimen/small_padding"
                android:text="@string/add_img_gallery_text"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/add_img_for_camera_btn"
                style="@style/CreateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:padding="@dimen/small_padding"
                android:text="@string/add_img_camera_text"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>