<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginTop="@dimen/padding_auth_input_fields_top"
        android:layout_marginRight="@dimen/standard_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/input_login_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/auth_login_hint"
            app:helperTextColor="@color/gray"
            app:primaryColor="@color/gray"
            app:secondaryColor="@color/gray">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/login_input_et"
                android:singleLine="true"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:background="@drawable/shadow_field"
                android:layout_height="wrap_content" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/input_password_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:labelText="@string/auth_password_hint"
            app:primaryColor="@color/gray"
            app:secondaryColor="@color/gray">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:background="@drawable/shadow_field"
                android:textColor="@color/black"
                android:inputType="textPassword" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        style="@style/CustomAuthBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/large_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/auth_user_btn"
            style="@style/AuthBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/standard_padding"
            android:paddingBottom="@dimen/standard_padding"
            android:text="@string/auth_loginIn_btn"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/auth_pb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>