<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNewsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_New_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/create_New_btn"
                style="@style/CreateBtn"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/create_news_state_list_btn"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/addNew_create_btn" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_New_toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                app:counterEnabled="true"
                app:counterMaxLength="140"
                app:counterOverflowTextAppearance="@style/TextLimitError"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_title_New_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/addNew_title_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="26sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                app:counterOverflowTextAppearance="@style/TextLimitError"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_description_New_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/addNew_description_hint"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <FrameLayout
                android:id="@+id/img_new_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:visibility="gone"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/img_add_new_iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:src="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/img_close_ibtn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/ic_margin"
                    android:layout_marginEnd="@dimen/ic_margin"
                    android:background="@drawable/round_corner_close_btn"
                    android:src="@drawable/ic_close" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/add_img_ibtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:background="@drawable/add_img_news_btn"
        android:padding="@dimen/small_padding"
        android:src="@drawable/ic_attach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>